# tinysol-lang

./: TODO  dune-project
lib/: ast.ml  cli.ml  cli_ast.ml  lexer.mll  main.ml  parser.mly  prettyprint.ml  static.ml  sysstate.ml  typechecker.ml  types.ml  utils.ml
test/: c1.sol  constant.ml  dune  externpay.ml  multiple_returns.ml  other_tests.ml  parser.ml  recv.ml  semantics.ml  shortcircuit.ml  tinysol.ml  typecheck.ml  typechecker.ml
